--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,11 +15,12 @@ jobs:
       uses: easingthemes/ssh-deploy@main
       with:
         SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-        SOURCE: "/"
+        SOURCE: ""
         ARGS: "-avzr -i"
         REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
         REMOTE_USER: ${{ secrets.REMOTE_USER }}
         TARGET: ${{ secrets.TARGET }}
+        EXCLUDE: ""
         SCRIPT_AFTER: |
           touch .env
           echo PROJECT_PATH=${{ secrets.TARGET }}/src >> .env
