build: deploy fix

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
         SCRIPT_AFTER: |
           cd ${{ secrets.TARGET }}
           touch .env
-          echo PROJECT_PATH=${{ secrets.TARGET }}/src >> .env
+          echo PROJECT_PATH=${{ secrets.TARGET }}src >> .env
           echo PROJECT_NAME=ddinsta_bot >> .env
           echo PROJECT_PORTS=${{ secrets.PROJECT_PORTS }} >> .env
           cat .env
@@ -33,4 +33,4 @@ jobs:
           echo BOT_TOKEN=${{ secrets.BOT_TOKEN }} >> .env
           cat .env
           cd ..
-          docker-compose up -b
+          docker-compose up -d
